<resources>
    <string name="app_name">EXamHub App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account_label">Create New Account</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="signup_button">Signup</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="fill_all_fields">Please fill in all fields.</string>
    <string name="password_mismatch">Passwords do not match.</string>
    <string name="operation_failed">Operation failed.</string>
    <string name="welcome_text_description">Welcome message for the Exam Hub app.</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="question_placeholder">What is your question?</string>
    <string name="option1_placeholder">Option 1</string>
    <string name="option2_placeholder">Option 2</string>
    <string name="option3_placeholder">Option 3</string>
    <string name="option4_placeholder">Option 4</string>
    <string name="correct_answer_placeholder">Correct Answer</string>
    <string name="option1_desc">Select option 1</string>
    <string name="option2_desc">Select option 2</string>
    <string name="option3_desc">Select option 3</string>
    <string name="option4_desc">Select option 4</string>
    <!-- Existing strings -->
    <string name="exam_title">Exam</string>
    <string name="start_button_description">Start the exam</string> <!-- Added -->
    <string name="instruction_text_description">Select your exam type from the options below.</string>
</resources>