<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/grey_backround"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="30dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
    android:textSize="22sp"
    android:textColor="@color/main"
    android:padding="10dp"
    android:text="@string/question_placeholder"
    android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:buttonTint="@color/main"
            android:text="@string/option1_placeholder"
        android:contentDescription="@string/option1_desc"/>

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:buttonTint="@color/main"
            android:text="@string/option2_placeholder"
        android:contentDescription="@string/option2_desc"/> <!-- Content description -->

        <RadioButton
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:buttonTint="@color/main"
            android:text="@string/option3_placeholder"
        android:contentDescription="@string/option3_desc"/> <!-- Content description -->

        <RadioButton
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:buttonTint="@color/main"
            android:text="@string/option4_placeholder"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/option4_desc"/> <!-- Content description -->
    </RadioGroup>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@color/green_dark"
        android:background="@drawable/green_background"
        android:text="@string/correct_answer_placeholder"
    android:textStyle="bold"
    android:gravity="center"
    android:visibility="gone"/>
</LinearLayout>
